k8s/overlays/local/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stocksim
  labels:
    app.kubernetes.io/name: stocksim
