k8s/overlays/local/marketfeed-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketfeed
spec:
  template:
    spec:
      containers:
        - name: marketfeed
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
