k8s/overlays/local/portfolio-worker-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-worker
spec:
  template:
    spec:
      containers:
        - name: portfolio-worker
